--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 <div class="row">
 <div class="col-md-12">
 <h4 class="aboutus1">ABOUT US</h4>
-<h4 class="aboutus1-details">METABILLBOARD IS A PROJECT IS A DECENTRALIZED PROJECT DESIGNED TO GIVE A NEW WAY OF COLLECTING NFT's. ALLOWING EACH INDIVIDUALS TO ADVERTISE THEIR SELF BY OWNING AN NFT.
+<h4 class="aboutus1-details">METABILLBOARD IS A PROJECT IS A DECENTRALIZED PROJECT DESIGNED TO GIVE A NEW WAY OF COLLECTING NFT's. ALLOWING EACH INDIVIDUALS TO ADVERTISE THEIR SELF BY SIMPLY OWNING AN NFT.
 </h4>
 <h4 class="aboutus1-details"> METABILLBOARD - PIXEL EDITION IS ONE OF THE MAIN PROJECT OF METABILLBOARD. IT HAS 3,513 UNIQUE PIXEL CHARACTERS. EACH CHARACTERS HAS UNIQUE COORDINATES IN THEM
   THAT CORRESPONDS TO THEIR SPACE AND LOCATION ON THE BILLBOARD. IMAGES OF THE COLLECTORS THAT OWNED A PIXEL CHARACTERS WILL BE PLACED ON THE SPACE THEIR PIXEL CHARACTERS ARE LOCATED. JOIN OUR
