--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@ SPACE WAR BY OWNING METABILLBOARD - PIXEL EDITION CHARACTERS</h4>
 <a href="https://opensea.io/collection/metabillboard-pixel"><img src="images/SOCIAL-OPENSEA.png"></a>
 <a href="https://twitter.com/metabillboardpx"><img src="images/SOCIAL-TWITTER.png"></a>
 <a href="https://t.me/metabillboardpixel"><img src="images/SOCIAL-TELEGRAM.png"></a>
-<a href="https://youtu.be/G2Or7seW1Q0"><img src="images/SOCIAL-YOUTUBE.png"></a>
+<a href="https://youtu.be/1qTvxL09_Ik"><img src="images/SOCIAL-YOUTUBE.png"></a>
 </div>
 </div>
 
