--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 <a class="nav-link" href="#spacewarmain">SPACE WAR</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link">RANKINGS</a>
+                <a class="nav-link" href="#faqs">FAQs</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="#footer">CONTACTS</a>
@@ -187,6 +187,7 @@ SPACE WAR BY OWNING METABILLBOARD - PIXEL EDITION CHARACTERS</h4>
         <h4 class="space-exmpletxt2">METABILLBAORD SPACE REFRESH IS EVERY 2 WEEKS.</h4>
         <h4 class="space-exmpletxt1">IT WILL GIVE ENOUGH TIME FOR THE BUYERS, SELLERS AND COLLECTORS TO PLAN AND STRATEGIZE TO GREATLY IMPROVE THEIR POSITION IN THE BILLBOARD SPACE AND MARKET BEFORE EVERY RESET.</h4>
   </div>
+   <section id="faqs">
   <h4 class="askedtitle">FREQUENTLY ASKED QUESTIONS</h4>
   <h4 class="askedquestion">1. WHY METABILLBOARD NFT's ORIGINAL LISTING PRICE ARE SUPER LOW ? </h4>
   <h4 class="askedanswer">WE LIST OUR NFT's IN A SUPER LOW PRICE SO THAT THE COLLECTORS CAN FOCUS MORE ON COLLECTING AND ON THEIR STRATEGY IN SPACE WAR WITHOUT THINKING ABOUT THE PRICE OF OUR NFT.
@@ -201,6 +202,7 @@ SPACE WAR BY OWNING METABILLBOARD - PIXEL EDITION CHARACTERS</h4>
   <h4 class="askedquestion">4. DOES YOUR TEAM HAVE ANY PLAN ON CREATING A CRYPTO CURRENCY BASED ON YOUR NFT BILLBOARD CONCEPT ? </h4>
   <h4 class="askedanswer">MAYBE...... AND IF IT HAPPENS WE AIMED THAT THE TOKEN WILL BE OWNED SOLELY BY THE COMMUNITY. ALL OF THE TOKENS WILL BE SURRENDERED INTO THE MARKET/DEX AND WILL BE
     BOUGHT BACK AND BURN BY OUR TEAM BY USING OUR NFT SALE PROFIT. </h4>
+  </section>
 
 
 </div>
